--- a/client-default.yml
+++ b/client-default.yml
@@ -3,3 +3,12 @@ server:
   
 service:
  name: foo
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
