--- a/foo.yml
+++ b/foo.yml
@@ -1,1 +1,18 @@
+server:
+  port: 8083
+  
+service:
+ name: foo
+ 
+spring:
+  application:
+    name: client-service
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
